--- a/app/views/blog_posts/_admin_links.html.erb
+++ b/app/views/blog_posts/_admin_links.html.erb
@@ -1,3 +1,5 @@
+<!-- this partial dictates the appearance of the admin links (admin only) that appear with a blog_post -->
+
 <% if user_signed_in? && current_user.admin? %>
 	<div class="blogAdminLinks" style="font-size:1.2em; text-align:center">
 		<ul class="blogList">
