--- a/app/views/blog_posts/_blog_post_result.html.erb
+++ b/app/views/blog_posts/_blog_post_result.html.erb
@@ -1,17 +1,49 @@
+<!-- this partial dictates the appearance of each blog_post search result at /blog_posts/resources_search -->
+<style>
+.blogPostContainer { /* contains the entire single blog post search result */
+	padding: 30px;
+	padding-bottom:20px;
+}
+a.blogPostLink { /* link to post */
+	font-size:2.2em; 
+	color:#62acbd;
+}
+a.blogPostLink:hover {
+	color:#68c2d8;
+}
+span.postType { /* category header indicating what type of blog post this is */
+	font-size:1.5em;
+	color:#575758;
+}
+span.blogPostTags { /* blog post tags */
+	font-size:1.3em;
+}
+.postBody { /* truncated body (text) of the blog_post */
+	line-height:1.1em;
+	margin-top:15px;
+}
+</style>
+
 <div class="blogPostContainer">
-<a href="/blog_posts/<%=f.id%>" class="blogPostLink"><%=f.title%></a>
-<% if f.is_our_blog %>
-<span class="postType"> - VolunteerVoice Blog Post </span>
-<% else %>
-<span class="postType"> - Article Post </span>
-<% end %>
-<span class="blogPostTags">
-(<%=f.blog_tags[0..2].map{|f| f.tag}.join(", ")%>)
-</span>
+	<!-- blog post title -->
+	<a href="/blog_posts/<%=f.id%>" class="blogPostLink"><%=f.title%></a><!-- end title -->
+	
+	<!-- type of blog post -->
+	<% if f.is_our_blog %> <!-- if post is a VVI blog_post -->
+		<span class="postType"> - VolunteerVoice Blog Post </span>
+	<% else %> <!-- if post is an article -->
+		<span class="postType"> - Article Post </span>
+	<% end %><!-- end type of blog post -->
+	
+	<!-- blog tags -->
+	<span class="blogPostTags">
+		(<%=f.blog_tags[0..2].map{|f| f.tag}.join(", ")%>)
+	</span><!-- end blog tags -->
 
-<p class="postBody">
-<%= (truncate f.body.gsub(%r{</?[^>]+?>}, ''), :length => 100).html_safe %>
-</p>
+	<!-- body (text) of blog post (truncated) -->
+	<p class="postBody">
+		<%= (truncate f.body.gsub(%r{</?[^>]+?>}, ''), :length => 100).html_safe %>
+	</p><!-- end body -->
 
 
-</div>
+</div><!-- end blogPostContainer -->
