fixing blog posts page

--- a/app/views/blog_posts/_interesting.html.erb
+++ b/app/views/blog_posts/_interesting.html.erb
@@ -28,7 +28,7 @@
 	<!-- article/post title (link) -->
 	<tr>
 		<td>
-			<p class="green articleTitleContainer">
+			<p class="green postTitleContainer">
 				<a class="article-title" href="<%=blog_post.blog_link%>" target="_blank">
 					<%= blog_post.title %>
 				</a>
