--- a/app/views/blog_posts/_our_blog.html.erb
+++ b/app/views/blog_posts/_our_blog.html.erb
@@ -19,7 +19,7 @@
 	<!-- blog post title (link)-->
 	<tr>
 		<td>
-			<p class="green articleTitleContainer">
+			<p class="green postTitleContainer">
 				<a href="/blog_posts/<%=f.id%>"> 
 					<%=f.title%>
 				</a>
