--- a/app/views/blog_posts/new.html.erb
+++ b/app/views/blog_posts/new.html.erb
@@ -1,5 +1,5 @@
 <style>
-	.bigTitle {
+	.bigTitle { /* page title, reads: New Blog Post */
 		text-align:center;
 		font-size:3em;
 		margin-top:30px;
@@ -8,9 +8,7 @@
 </style>
 
 <%= javascript_include_tag "/assets/jquery.js"%>
-<% self.respond_to?(:title) && title('New Post') %>
-<% @show_title = false -%>
-<%= stylesheet_link_tag 'blog_kit' %>
+
 <p class="bigTitle">New Blog Post</p>
 
 <%= render :partial => 'form' %>
